# sales-tracker

./: .env.example  .env.vercel  .gitignore  .vercelignore  AUTH_FIXES_README.md  CSS_SCROLLING_FIX.md  GOOGLE-SHEET-TEMPLATE.txt  GOOGLE_APPS_SCRIPT.js  OAUTH_PUBLISHING_GUIDE.md  README.md  SETUP-CHECKLIST.md  START-HERE.md  SYNC_TO_SUPABASE.js  amplify.yml  index.html  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
.claude/agents/: ANNIHILATION.md  ANTI_PARALYSIS_PROTOCOL.md  COLORS.md  NOTIFICATION_BRAIN_STARTUP_PROTOCOL.md  README.md  brain_compliance_report.json  quick_switch_guide.md
AGENTS/: COMMAND_HIERARCHY_PROTOCOL.md  NOTIFICATION_TO_ALL_AGENTS.md  NOTIFICATION_TRUST_BASED_TASK_MANAGEMENT.md  PropertyInspectionSystem_DesignDocument.md  TASK_IMPLEMENTATION_GUIDE.md  activate_agent_color.sh
AGENTS/Analyst/: MEMORY_INJECTION_OPTIMIZATION_RESEARCH.md  analyst-instructions.md
AGENTS/Applicationer/: ContinuousLearning.md
AGENTS/Architect/: APPROVAL_GATES_NATIVE_ARCHITECTURE.md  ContinuousLearning.md  PROJECT_LOCAL_MEMORY_ARCHITECTURE.md  metadata.json
AGENTS/Athena/: GLOBAL-CONTEXT.md  Learning.md  MEMORY.md.backup-20251003-221218
AGENTS/Auditor/: AUDIT_REPORT_MASTER_PLAN_2025-10-03.md  SPRINT_DOCUMENTATION_VALIDATION_REPORT.md
AGENTS/Backender/: README.md  metadata.json
AGENTS/Basher/: PERSISTENCE_PROTOCOL.md  basher-instructions.md
AGENTS/Binarian/: MEMORY.md  binarian-instructions.md
AGENTS/Cacher/: ContinuousLearning.md  MEMORY.md  NOTIFICATION_DISTRIBUTED_ARCHITECTURE.md
AGENTS/Cartographer/: ContinuousLearning.md
AGENTS/ClaudeCodeIntegrator/: MEMORY.md  PHASE_2_CONFLICT_RESOLUTION_PLAN.md
AGENTS/Consolidator/: metadata.json
AGENTS/Debugger/: ContinuousLearning.md
AGENTS/Deliverer/: GLOBAL-CONTEXT.md  PERSISTENCE_PROTOCOL.md  deliverer-instructions.md
AGENTS/Developer/: MEMORY.md  PERSISTENCE_PROTOCOL.md
AGENTS/DirectoryOrganizer/: ARCHIVE_SAFETY_CONFIGURATION_GUIDE.md  COLLABORATION_PROTOCOL_IMPLEMENTATION_2025-10-01.md  MEMORY_ARCHITECTURE_ANALYSIS.md  NURU_AI_COMPLIANCE_IMPLEMENTATION_2025-10-01.md
AGENTS/Documenter/: README.md
AGENTS/Enforcer/: ContinuousLearning.md  MEMORY.md
AGENTS/Engineer/: MULTI_REPOSITORY_IMPLEMENTATION_FINAL_REPORT.md  README.md  metadata.json
AGENTS/Fixer/: Fixer_memory.md  MEMORY.md  fixer-instructions.md
AGENTS/General/: metadata.json
AGENTS/Infrastructurer/: infrastructurer-instructions.md
AGENTS/Manager/: AGENTS-FULL.md  ELIMINATION_WARNING.md  MANAGER_NATIVE_AGENT_SYSTEM_REVIEW.md  NATIVE_AGENT_SYSTEM_ARCHITECTURE_ANALYSIS.md  NOTIFICATION_DISTRIBUTED_ARCHITECTURE.md  PERSISTENCE_PROTOCOL.md  QUICK_FIX_CHECKLIST.md  successful-agent-creation-patterns.md
AGENTS/Memory/: GLOBAL-CONTEXT.md  README.md
AGENTS/Networker/: ContinuousLearning.md  PERSISTENCE_PROTOCOL.md
AGENTS/NotionManager/: FORMATTING-DEMO.md  README.md  SETUP-GUIDE.md  TROUBLESHOOTING.md  V4.0-ARCHITECTURE.md  V4.0-IMPLEMENTATION-REPORT.md  V4.0.0-IMPLEMENTATION-COMPLETE.md  VALIDATION-SETUP-COMPLETE.md  change-detection-system.js  demo-output-1761313006596.md  git-commit-orchestrator.js  package.json  test-change-detection.js
AGENTS/Planner/: ContinuousLearning.md  planner-instructions.md
AGENTS/Reactor/: CONTEXT_INJECTION.md  MEMORY.md
AGENTS/Refactorer/: CONTEXT_INJECTION.md  MEMORY.md  PERSISTENCE_PROTOCOL.md
AGENTS/Renderer/: CONTEXT_INJECTION.md  GLOBAL-CONTEXT.md  renderer-instructions.md
AGENTS/Rustist/: metadata.json  rustist-instructions.md
AGENTS/Scholar/: DOCUMENT_RELOCATION_NOTIFICATION.md  GLOBAL_STANDARD_UX_ISSUE_MANAGEMENT.md
AGENTS/Tester/: CONTEXT_INJECTION.md  agent.md
AGENTS/Topologist/: CONTEXT_INJECTION.md  GLOBAL-CONTEXT.md  MEMORY.md  TOOLKIT_INDEX.md  repository_change_analyzer.js  sequential_commit_protocol.js
AGENTS/Topologist/tools/topologist-cli/: Cargo.toml
AGENTS/Topologist/tools/topologist-cli/src/: main.rs  session.rs  types.rs
AGENTS/Trader/: CONTEXT_INJECTION.md  metadata.json
AGENTS/UX/: ux-instructions.md
AGENTS/Verifier/: DOCUMENTATION_COMPLETENESS_REPORT_2025-10-03.md  verifier-instructions.md  verify_cross_references.sh
AGENTS/Visionary/: CONTEXT_INJECTION.md  metadata.json
AGENTS/Writer/: ContinuousLearning.md
AGENTS/branding/: MEMORY.md
AGENTS/designer/: MEMORY.md
AGENTS/frontend/: MEMORY.md
AGENTS/seo/: MEMORY.md
AGENTS/uiux/: MEMORY.md
docs/technical/: GOOGLE_MAPS_POI_INTEGRATION.md  PROJECT-SUMMARY.md
docs/testing/: QA-TEST-PLAN.md
docs/troubleshooting/: PLACES_API_FIX.md
public/: manifest.json  sw.js
scripts/: migrate-to-supabase.js
src/: App.jsx  config.js
src/components/: AdminSetup.jsx  DeliveriesView.jsx  FollowUpsView.jsx  Layout.jsx  ListView.jsx  LoadingScreen.jsx  LocationPanel.jsx  Login.jsx  NotificationSettings.jsx  SimpleMap.jsx  StatsCard.jsx  TodaysTasks.jsx
src/hooks/: useBackButton.js  useDeliveries.js  useFollowUps.js  useGoogleAuth.js  useLocations.js  useNearbyDetection.js  useSettings.js
src/styles/: App.css  variables.css
src/utils/: calendarUtils.js  colorUtils.js  dateUtils.js  followUpTemplates.js  googleAuth.js  googleCalendar.js  googleSheets.js  sendEmail.js  summaryUtils.js  syncBelarro.js  syncSheets.js
staging/: ADMIN_EMAILS_SETUP.md  AUTHENTICATION_FIX_GUIDE.md  CLAUDE.md  ROADMAP.md  SETUP-GUIDE.md  package-lock.json
staging/.claude/: AGENTS_INSTALLED.md  (+1 more)
supabase/: schema.sql
website main/: DOCUMENTATION_INDEX.md  QUICK-START.md  temp_css_patch.txt  test-agents.sh
website main/.claude/agents/Athena/Sessions/HybridPrototypeOrchestrator/: Cargo.toml  REAL_TASK_INTEGRATION_OPTIONS.md
website main/.claude/agents/Athena/Sessions/HybridPrototypeOrchestrator/test-prototype/: README.md
website main/.claude/agents/Manager/scripts/: Cargo.toml  example-batch-config.json  intuitive-create.sh  quick-agent.sh
website main/.claude/agents/Manager/scripts/src/: batch_create_agents.rs
website main/.claude/agents/Manager/scripts/templates/: MEMORY.hbs  README.hbs
website main/AGENTS/_archived/CGUIProjectDeveloper/toolkit/: CMakeLists.txt  README.md
(+1722 files in other folders)
